--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,10 @@ services:
     environment:
       - WS_PORT=8080
       - REDIS_URL=redis://redis:6379
+      - DATABASE_URL=postgres://harpy:harpy@postgres:5432/harpy
     depends_on:
+      postgres:
+        condition: service_healthy
       redis:
         condition: service_healthy
     healthcheck:
@@ -206,8 +209,11 @@ services:
     environment:
       - HTTP_PORT=8084
       - DATABASE_URL=postgres://harpy:harpy@postgres:5432/harpy
+      - GRAPH_URL=http://harpy-graph:8083
     depends_on:
       postgres:
+        condition: service_healthy
+      harpy-graph:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8084/health"]
