--- a/services/harpy-aip/Dockerfile
+++ b/services/harpy-aip/Dockerfile
@@ -19,6 +19,7 @@ FROM debian:bookworm-slim
 
 RUN apt-get update && apt-get install -y \
     ca-certificates \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/target/release/harpy-aip /usr/local/bin/harpy-aip
