--- a/services/harpy-ingest/Dockerfile
+++ b/services/harpy-ingest/Dockerfile
@@ -23,6 +23,7 @@ FROM debian:bookworm-slim
 
 RUN apt-get update && apt-get install -y \
     ca-certificates \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/target/release/harpy-ingest /usr/local/bin/harpy-ingest
