--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -210,6 +210,7 @@ services:
       - HTTP_PORT=8084
       - DATABASE_URL=postgres://harpy:harpy@postgres:5432/harpy
       - GRAPH_URL=http://harpy-graph:8083
+      - NEWS_API_KEY=${NEWS_API_KEY:-}
     depends_on:
       postgres:
         condition: service_healthy
