--- a/services/harpy-aip/Cargo.toml
+++ b/services/harpy-aip/Cargo.toml
@@ -19,5 +19,7 @@ anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 jsonwebtoken.workspace = true
+chrono.workspace = true
+uuid.workspace = true
 
 harpy-core = { path = "../../crates/harpy-core" }
