--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,3 +135,60 @@ jobs:
         run: |
           echo "Binary sizes:"
           ls -lh target/release/harpy-* | grep -v '.d' || true
+
+  frontend:
+    name: Frontend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: package-lock.json
+
+      - name: Install workspace dependencies
+        run: npm ci
+
+      - name: Build shared types
+        run: npm --prefix packages/shared-types run build
+
+      - name: Lint web app
+        run: npm --prefix apps/web run lint
+
+      - name: Build web app
+        run: npm --prefix apps/web run build
+
+  smoke:
+    name: Smoke
+    runs-on: ubuntu-latest
+    needs: [build, frontend]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Start offline stack
+        run: make dev-up-offline
+
+      - name: Verify health endpoints
+        run: make dev-health
+
+      - name: Verify AIP query contract
+        run: |
+          curl -fsS -X POST http://localhost:8084/aip/query \
+            -H 'content-type: application/json' \
+            -d '{"tool":"set_layers","args":{"layers":["AIRCRAFT","SATELLITE"]},"apply":true,"confirm":true,"actor_id":"ci-smoke"}'
+
+      - name: Verify Graph export contract
+        run: |
+          curl -fsS -X POST http://localhost:8083/graph/export \
+            -H 'content-type: application/json' \
+            -H 'x-harpy-role: ADMIN' \
+            -H 'x-harpy-scopes: graph:query,graph:query:advanced,graph:export' \
+            -H 'x-harpy-actor-id: ci-smoke' \
+            -d '{"query":{"template":"get_track_history","params":{"track_id":"track_0"},"page":1,"page_size":20},"watermark":"CI-SMOKE","expires_in_secs":300}'
+
+      - name: Stop stack
+        if: always()
+        run: make dev-down
