--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,9 @@
     "dev:online": "NEXT_PUBLIC_STREAM_MODE=online NEXT_PUBLIC_MAP_MODE=online NEXT_PUBLIC_WS_URL=ws://localhost:8080/ws NEXT_PUBLIC_OSM_TILE_URL=https://tile.openstreetmap.org/ next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed"
   },
   "dependencies": {
     "@harpy/shared-types": "*",
@@ -23,6 +25,7 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
