--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@harpy/shared-types",
   "version": "0.1.0",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "npm run proto:generate && mkdir -p dist && cp src/harpy.js src/harpy.d.ts dist/ && printf 'export * from \"./harpy.js\";\\n' > dist/index.js && printf 'export * from \"./harpy\";\\n' > dist/index.d.ts",
     "proto:generate": "pbjs -t static-module -w es6 -o src/harpy.js ../../proto/harpy/v1/harpy.proto && pbts -o src/harpy.d.ts src/harpy.js"
   },
   "dependencies": {
